cabal-version:      2.4
name:               lightningscripts
version:            0.1.0.0

-- A longer description of the package.
-- description:

author:             Andreas Bech
maintainer:         andreaslillevangbech@outlook.com

library
    exposed-modules:  
        LnTools
        LnTools.Network
        LnTools.Analysis

    build-depends:    
        base ^>=4.14.3.0
        , aeson >= 2.0.3.0
        , containers >= 0.6
        , text

    hs-source-dirs:   src
    default-language: Haskell2010

executable choose_nodes
    main-is:          ChooseNodes.hs

    build-depends:
        base ^>=4.14.3.0
        , containers >= 0.6
        , yaml >= 0.11
        , optparse-applicative >= 0.16
        , text
        , lightningscripts

    hs-source-dirs:   app
    default-language: Haskell2010
